--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 client/build
+client/.vscode
 
 client/frameworks/cocos2d-x/tools/bindings-generator/libclang/libclang.dylib
 client/frameworks/cocos2d-x/tools/bindings-generator/libclang/libclang.so
